Se creó con Colab

--- a/ProyectoDS_ParteIll_Juan_Benitez.ipynb
+++ b/ProyectoDS_ParteIll_Juan_Benitez.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmiV7JCrlxIgTO9va9kay9",
+      "authorship_tag": "ABX9TyPzUvz5EcQjFXG1vYyAaoGd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,7 +131,7 @@
         "id": "xpTjylXumHII",
         "outputId": "6dd105ac-75ee-446d-b30b-bf536cf89e44"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +597,7 @@
       "metadata": {
         "id": "8QLL0WO9yrol"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -626,7 +626,7 @@
         "id": "8HW5uLWVzBlN",
         "outputId": "264f03dc-1d1f-47dd-eb6a-9f59949287d5"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1087,7 +1087,7 @@
         "id": "9VlywRlBz-Ve",
         "outputId": "60636e78-bb38-4626-d938-b1915083d05d"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1124,7 +1124,7 @@
         "id": "BWSriKYt0S2k",
         "outputId": "426778ec-6138-4173-c653-3f07637477c6"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1575,7 +1575,7 @@
         "id": "VQHDVqvY1Erl",
         "outputId": "9acd4711-8c8f-4bac-962e-1e8fac769d21"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1607,7 +1607,7 @@
         "id": "kopkZBbW1ZaD",
         "outputId": "d703d7c1-b254-4e1f-a759-32265855175a"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1669,7 +1669,7 @@
         "id": "pMpp4NJ72cY6",
         "outputId": "ccdec1ed-1e9e-4ddf-cf9d-8a6b56813d10"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2103,7 +2103,7 @@
         },
         "outputId": "f301ee54-353d-4544-df79-03f7d0e41f6c"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2160,7 +2160,7 @@
       "metadata": {
         "id": "RCGxd-M0NClr"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2177,7 +2177,7 @@
         "id": "w5-oRJ1DNMvZ",
         "outputId": "7f4c390d-4320-42e3-e4c0-c312dd5ba188"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2221,7 +2221,7 @@
       "metadata": {
         "id": "pC0wHx7iD7Q4"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2237,7 +2237,7 @@
         "id": "jRqrartNEaED",
         "outputId": "6264751b-0179-4e08-d655-b5772b66e10c"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2364,7 +2364,7 @@
         "id": "PewlGLVc6EBz",
         "outputId": "4213f1f7-fd7a-4443-e6b0-43ff5a6be87a"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2414,7 +2414,7 @@
         "id": "xOkke601ioci",
         "outputId": "4826ed35-521e-47dc-80df-c2c45baaf431"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2471,7 +2471,7 @@
         "id": "6XClteVCzvOx",
         "outputId": "507272c5-f466-4e50-b63e-d3db85c404cb"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2541,7 +2541,7 @@
         "id": "8AtOhp_lzjel",
         "outputId": "11fc3567-8ce7-4619-dc90-5a179b40462c"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2596,7 +2596,7 @@
         "id": "xBCskQRf0Wx8",
         "outputId": "db06f4f5-dce5-45b3-d12f-4fa990704547"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2654,7 +2654,7 @@
         },
         "outputId": "40db193f-2f4c-4d45-d0c0-9382006777c2"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2761,7 +2761,7 @@
         "id": "j874HTjWYXg1",
         "outputId": "90a635ef-d399-49c3-8249-3103c20d75d3"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2793,7 +2793,7 @@
         "id": "FYYDihoDYvhs",
         "outputId": "a801a293-43b3-4f42-ec80-405adbf9c6de"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2894,7 +2894,7 @@
       "metadata": {
         "id": "tPWnHQq56fFE"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2914,7 +2914,7 @@
       "metadata": {
         "id": "NeCFuoAp6hAx"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2948,7 +2948,7 @@
         "id": "_QvKD7or6k6K",
         "outputId": "9539b197-b4ec-478e-ce7a-8691ba4aa9f8"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3038,7 +3038,7 @@
         "id": "h-z9yiW96qIi",
         "outputId": "50e3f392-35e8-4276-e174-aa669c2d4f05"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3095,7 +3095,7 @@
         "id": "Moru0BZaal2j",
         "outputId": "736c7b74-decc-4cbf-8de2-902326e2344b"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3145,7 +3145,7 @@
         "id": "zgjD3fQU7oQN",
         "outputId": "f2b3251b-f60b-4a81-835b-f7ec9eb745c3"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3212,13 +3212,13 @@
       "metadata": {
         "id": "7Q6QjcDfAg1V"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "* El primer paso es conversir las variables de NPS en categorías."
+        "* El primer paso es convertir las variables de NPS en categorías."
       ],
       "metadata": {
         "id": "tYuiS_mKid97"
@@ -3261,7 +3261,7 @@
         },
         "outputId": "4f4246a7-82b0-4046-b366-5d2a8b0ff8e9"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3325,12 +3325,11 @@
       "metadata": {
         "id": "JZQILSV1BbbR",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 543
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "9042164b-b447-45cc-b4e1-1da32675fe5c"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3373,7 +3372,7 @@
         },
         "outputId": "7c576092-3452-46f3-cd0f-f636545dfa20"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3402,7 +3401,7 @@
         },
         "outputId": "0c0521af-2fa7-441f-95cd-2142643be824"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
